2006-03-05  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/undo/StateEditable.java
	(restoreState): Fixed bad API doc tag,
	* javax/swing/undo/UndoableEdit.java: Copied API doc comments from
	AbstractUndoableEdit.java,
	* javax/swing/undo/UndoableEditSupport.java
	(createCompoundEdit): Fixed bad API doc tag,
	* javax/swing/undo/UndoManager.java
	(editToBeUndone): Fixed bad API doc tag,
	(editToBeRedone): Likewise.

2006-03-05  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/ComboBoxUI.java: Fixed typo in class description, 
	and corrected a bad API doc tag.

2006-03-05  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/colorchooser/ColorSelectionModel.java: Reformatted and
	added API docs all over.

2006-03-05  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/filechooser/FileFilter.java: 
	(accept): Fixed API doc tag,
	(getDescription): Likewise,
	* javax/swing/filechooser/FileView.java:
	(isTraversable): Fixed API doc tag.

2006-03-05  Tom Tromey  <tromey@redhat.com>

	* vm/reference/java/lang/reflect/Constructor.java (toString): Use
	ClassHelper.getUserName.
	* vm/reference/java/lang/reflect/Method.java (toString): Use
	ClassHelper.getUserName.
	(getUserTypeName): Removed.
	* gnu/java/lang/ClassHelper.java (getUserName): New method.
	* vm/reference/java/lang/reflect/Field.java (toString): Use
	ClassHelper.getUserName.

2006-03-05  Olivier Jolly  <olivier.jolly@pcedev.com>

	Fixes PR 22813
	* java/net/URLClassLoader.java (FileURLLoader.getResource):	
	Allows directories as valid resources.

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* configure.ac (VERSION): Set to 0.90-pre.

2006-03-04  Tom Tromey  <tromey@redhat.com>

	* javax/swing/SpringLayout.java (Constraints): New constructor.
	* javax/swing/Spring.java (width): New method.
	(height): Likewise.
	(scale): Likewise.

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* gnu/java/net/protocol/http/HTTPConnection.java (Pool.get): Remove