@@ -1,5 +1,5 @@
 /* DefaultFocusManager.java --
-   Copyright (C) 2002, 2004 Free Software Foundation, Inc.
+   Copyright (C) 2002, 2004, 2006, Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -49,9 +49,10 @@ import java.util.Stack;
  *
  * @author Andrew Selkirk
  */
-public class DefaultFocusManager extends FocusManager {
+public class DefaultFocusManager extends FocusManager 
+{
 
-	/**
+  /**
    * historyStack
    */
   private Stack historyStack;
@@ -77,7 +78,7 @@ public class DefaultFocusManager extends FocusManager {
     // TODO
   } // processKeyEvent()
 
-	/**
+  /**
    * focusNextComponent
    * 
    * @param component
@@ -88,7 +89,7 @@ public class DefaultFocusManager extends FocusManager {
     // TODO
   } // focusNextComponent()
 
-	/**
+  /**
    * focusPreviousComponent
    * 
    * @param component
@@ -99,66 +100,66 @@ public class DefaultFocusManager extends FocusManager {
     // TODO
   } // focusPreviousComponent()
 
-	/**
+  /**
    * getFirstComponent
    * 
    * @param container
    *          TODO
-   * @returns Component
+   * @return Component
    */
   public Component getFirstComponent(Container container)
   {
     return null; // TODO
   } // getFirstComponent()
 
-	/**
+  /**
    * getLastComponent
    * 
    * @param container
    *          TODO
-   * @returns Component
+   * @return Component
    */
   public Component getLastComponent(Container container)
   {
     return null; // TODO
   } // getLastComponent()
 
-	/**
+  /**
    * getComponentBefore
    * 
    * @param container
    *          TODO
    * @param component
    *          TODO
-   * @returns Component
+   * @return Component
    */
   public Component getComponentBefore(Container container, Component component)
   {
     return null; // TODO
   } // getComponentBefore()
 
-	/**
+  /**
    * getComponentAfter
    * 
    * @param container
    *          TODO
    * @param component
    *          TODO
-   * @returns Component
+   * @return Component
    */
   public Component getComponentAfter(Container container, Component component)
   {
     return null; // TODO
   } // getComponentAfter()
 
-	/**
+  /**
    * compareTabOrder
    * 
    * @param component1
    *          TODO
    * @param component2
    *          TODO
-   * @returns boolean
+   * @return boolean
    */
   public boolean compareTabOrder(Component component1, Component component2)
   {
